# hex-battle/backend/api/src/controllers/leaderboardController.ts
@@ -1,0 +1,84 @@
+import type {
+  IGetPlayersByGamesPlayedResult,
+  IGetPlayersByLatestResult,
+  IGetPlayersByWinsResult,
+} from '@hexbattle/db';
+import {
+  getPlayerByWallet,
+  getPlayersByGamesPlayed,
+  getPlayersByLatest,
+  getPlayersByWins,
+  requirePool,
+} from '@hexbattle/db';
+import { Controller, Get, Query, Route } from 'tsoa';
+
+@Route('leaderboard')
+export class LeaderboardController extends Controller {
+  @Get('/wins')
+  public async getLeaderboardByWins(@Query() wallet: string): Promise<{
+    players: IGetPlayersByWinsResult[];
+  }> {
+    const pool = requirePool();
+    const players = await getPlayersByWins.run(
+      {
+        limit: 20,
+        offset: 0,
+      },
+      pool
+    );
+    if (wallet && !players.find(p => p.wallet === wallet)) {
+      const [me] = await getPlayerByWallet.run({ wallet }, pool);
+      if (me) {
+        players.push(me);
+        players.sort((a, b) => b.wins - a.wins);
+      }
+    }
+
+    return { players };
+  }
+
+  @Get('/played')
+  public async getLeaderboardByPlayed(@Query() wallet: string): Promise<{
+    players: IGetPlayersByGamesPlayedResult[];
+  }> {
+    const pool = requirePool();
+    const players = await getPlayersByGamesPlayed.run(
+      {
+        limit: 20,
+        offset: 0,
+      },
+      pool
+    );
+    if (wallet && !players.find(p => p.wallet === wallet)) {
+      const [me] = await getPlayerByWallet.run({ wallet }, pool);
+      if (me) {
+        players.push(me);
+        players.sort((a, b) => b.played_games - a.played_games);
+      }
+    }
+
+    return { players };
+  }
+
+  @Get('/latest')
+  public async getLeaderboardByLatest(@Query() wallet: string): Promise<{
+    players: IGetPlayersByLatestResult[];
+  }> {
+    const pool = requirePool();
+    const players = await getPlayersByLatest.run(
+      {
+        limit: 20,
+        offset: 0,
+      },
+      pool
+    );
+    if (wallet && !players.find(p => p.wallet === wallet)) {
+      const [me] = await getPlayerByWallet.run({ wallet }, pool);
+      if (me) {
+        players.push(me);
+        players.sort((a, b) => b.last_block_height - a.last_block_height);
+      }
+    }
+    return { players };
+  }
+}
